@@ -1,10 +1,17 @@
 \version "1.5.68"
 
-
+\header {
+texidoc = "Hmm. what's this supposed to test?"
+}
 \score{
 	\notes\transpose c'{
-		\property Score.beamQuantisation = #'none
-
+\property Voice.Beam \set #'position-callbacks =
+ #`(,Beam::least_squares
+			       ,Beam::check_concave
+			       ,Beam::slope_damping
+			       ,Beam::shift_region_to_valid
+	
+			      )
 		[a'8 <a' g''>]
 		[c <c e,>]
 		[a'16 <a' g''>]
@@ -14,6 +21,6 @@
 	}
 	\paper{
 
-		linewidth = 60.0\mm
+		linewidth = 66.0\mm
 	}
 }
